// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MarketplaceItem should match snapshot, no homepage url 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <PluginIcon
      className="icon__plugin icon__plugin--background"
    />
    <div
      className="more-modal__details"
    >
      <span
        aria-label="name, test plugin"
        className="style--none"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </span>
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem should match snapshot, no plugin icon 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <PluginIcon
      className="icon__plugin icon__plugin--background"
    />
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem should match snapshot, with homepage url 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <PluginIcon
      className="icon__plugin icon__plugin--background"
    />
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem should match snapshot, with plugin icon 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem should match snapshot, with server error 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link item_error"
    id="marketplace-plugin-id"
    key="id"
  >
    <PluginIcon
      className="icon__plugin icon__plugin--background"
    />
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description error_text"
        >
          An error occurred.
        </p>
      </a>
    </div>
    <div
      className="more-modal__actions"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
      >
        <LoadingWrapper
          loading={false}
          text="Installing..."
        >
          <FormattedMessage
            defaultMessage="Try Again"
            id="marketplace_modal.list.try_again"
            values={Object {}}
          />
        </LoadingWrapper>
      </button>
    </div>
  </div>
</Fragment>
`;
